PROJECT(SDL2CmakeWasmThreadSample)
SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (GX_EMS_FLAGS "-s WASM=1 -s USE_SDL=2 -s USE_PTHREADS=1 -s NO_EXIT_RUNTIME=1 -s PTHREAD_POOL_SIZE=8 -s PTHREAD_HINT_NUM_CORES=8")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 ${GX_EMS_FLAGS}")
SET (CMAKE_EXECUTABLE_SUFFIX .html)
SET (GX_LIBS ${GX_LIBS} ${GX_EMS_FLAGS})
ADD_EXECUTABLE (main main.cpp)
TARGET_LINK_LIBRARIES (main ${GX_LIBS})