CMAKE_MINIMUM_REQUIRED(VERSION 3.18.1 FATAL_ERROR)
PROJECT(SDL2CmakeWasmThreadSample)

SET (CMAKE_CXX_STANDARD 20)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

SET (GX_EMS_FLAGS "-s USE_SDL=2 -s USE_PTHREADS=1 -pthread")

SET (GX_EMS_LINKER_FLAGS "${GX_EMS_FLAGS} -s WASM=1 -s NO_EXIT_RUNTIME=1 -s BINARYEN=1 -s INITIAL_MEMORY=268435456 -s PTHREAD_POOL_SIZE=8")
SET (GX_EMS_LINKER_FLAGS "${GX_EMS_LINKER_FLAGS} -s ALLOW_MEMORY_GROWTH=1 -s MAX_WEBGL_VERSION=2 -s LLD_REPORT_UNDEFINED --use-preload-plugins")

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 ${GX_EMS_LINKER_FLAGS}")

SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${GX_EMS_LINKER_FLAGS}")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GX_EMS_LINKER_FLAGS}")

SET (CMAKE_EXECUTABLE_SUFFIX .html)
SET (GX_LIBS ${GX_LIBS} ${GX_EMS_FLAGS})
ADD_EXECUTABLE (main main.cpp)
TARGET_LINK_LIBRARIES (main ${GX_LIBS})